--- a/src/scss/components/_head.scss
+++ b/src/scss/components/_head.scss
@@ -8,7 +8,7 @@
     }
 
     &__nav {
-        width: 373px;
+        max-width: 373px;
         margin: 0 auto;
         background-color: $secondary-darker;
         height: 63px;
